fix(extension): harden security, privacy, runtime gating + add E2E coverage
Security:
- Sanitize HTML rendering in showAnalysisModal() and learning list (XSS prevention)
- Add supported-portal URL allowlist before content script messaging
- Gate popup actions when extensionEnabled === false

Privacy:
- Redact diagnostics export to exclude raw sensitive data
- Include aiProviderConfig in clearAllPersonalData scope
- Scope refresh-from-config storage clearing to extension-owned keys only

Reliability:
- Add runtime settings enforcement in universal_content.js (fillForm, detectJD, etc.)
- Add setRuntimeSettings message action for live popup->content sync
- Throttle mutation observer applicationFormDetected signals
- Add detect-jd keyboard command handling in background.js
- Robust context menu upsert (remove+create) in background.js
- Handle passive content signals gracefully (no more "unknown action" noise)
- popup_v2.js health fallback changed to "Disconnected"

Testing:
- Fix stale test targeting legacy content.js -> universal_content.js
- Add E2E suites for extension popup, privacy actions, unknown field sync
- Add autopilot local site + Adobe live flow validation tests
- All 5 E2E test-results report success: true

Cleanup:
- Add .gitignore entries for test-results/, node_modules/, transient logs, db files
- Remove previously tracked node_modules from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,30 @@
-__pycache__/
-.vscode/
-.venv/
+__pycache__
+.vscode
 
-all excels/
-all resumes/
-logs/
-old/
-data/
+all excels
+all resumes
+logs
 
-node_modules/
+old
 
-config/secrets.py
+secrets.py
 config/personals.py
+.venv
 apikeys.py
 .env
-
 chrome_profile/
 chrome_profile_pilot/
-chrome_profile_test/
-
 extension/user_config.json
 
-# Ignore local assistant instruction artifacts
-.github/instructions/
+# Generated / transient
+test-results/
+dash_out.txt
+dash_err.txt
+dashboard_err.log
+extension_rebuilt.zip
+node_modules/
+*.pma
+backups/
+data/*.db
+data/*.db-shm
+data/*.db-wal
