--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,51 +1,25 @@
 {
   "manifest_version": 3,
-  "name": "Universal Job Auto-Fill Pro",
+  "name": "AI Hunter pro",
   "version": "3.0.1",
-  "description": "AI-powered auto-fill assistant for ALL job portals - LinkedIn, Indeed, Glassdoor, Workday, Greenhouse & more. Detects JDs, tailors resumes, and learns from your inputs.",
+  "description": "AI Hunter pro: AI-powered auto-fill assistant for job portals including LinkedIn, Indeed, Glassdoor, Workday, Greenhouse, and more. Detects JDs, tailors resumes, and learns from your inputs.",
   "permissions": [
     "activeTab",
     "storage",
     "scripting",
     "notifications",
-    "contextMenus"
+    "contextMenus",
+    "sidePanel"
   ],
+  "side_panel": {
+    "default_path": "sidepanel.html"
+  },
   "host_permissions": [
     "http://127.0.0.1:5001/*",
-    "http://localhost:5001/*",
-    "https://www.linkedin.com/*",
-    "https://linkedin.com/*",
-    "https://*.indeed.com/*",
-    "https://*.glassdoor.com/*",
-    "https://*.myworkday.com/*",
-    "https://*.workday.com/*",
-    "https://*.greenhouse.io/*",
-    "https://boards.greenhouse.io/*",
-    "https://*.lever.co/*",
-    "https://jobs.lever.co/*",
-    "https://*.smartrecruiters.com/*",
-    "https://*.bamboohr.com/*",
-    "https://*.icims.com/*",
-    "https://*.taleo.net/*",
-    "https://*.successfactors.com/*",
-    "https://*.jobvite.com/*",
-    "https://*.ashbyhq.com/*",
-    "https://*.breezy.hr/*",
-    "https://*.recruitee.com/*",
-    "https://*.jazz.co/*",
-    "https://*.wellfound.com/*",
-    "https://angel.co/*",
-    "https://*.monster.com/*",
-    "https://*.ziprecruiter.com/*",
-    "https://*.careerbuilder.com/*",
-    "https://*.dice.com/*",
-    "https://stackoverflow.com/jobs/*",
-    "https://*.remoteok.com/*",
-    "https://*.weworkremotely.com/*",
-    "https://*.flexjobs.com/*"
+    "http://localhost:5001/*"
   ],
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup_v2.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png",
@@ -109,13 +83,13 @@
         "https://*.weworkremotely.com/*",
         "https://*.flexjobs.com/*"
       ],
-      "js": ["universal_content.js"],
+      "js": ["content_bridge_v2.js", "universal_content.js"],
       "css": ["styles.css"],
       "run_at": "document_idle"
     }
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background_v2.js"
   },
   "web_accessible_resources": [
     {
